extends Node

@onready var sfx_dialogue_click_mech = $SFX_Dialogue_click_mech
@onready var sfx_drop_general = $SFX_Drop_General
@onready var sfx_mewo = $SFX_Mewo
@onready var sfx_pickup_general = $SFX_Pickup_General
@onready var sfx_purr_meow = $SFX_PurrMeow
@onready var sfx_success = $SFX_Success
@onready var sfx_block_sliding = $SFX_Block_Sliding
@onready var sfx_motor_engine_start_fail = $SFX_Motor_Engine_StartFail
